add sql generate with ai

--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.11.3",
+    "@types/pg": "^8.11.6",
+    "next": "14.2.3",
+    "pg": "^8.11.5",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "typescript": "^5",
