--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.11.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/pg": "^8.11.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
